[gd_scene load_steps=2 format=3 uid="uid://dv741qommfa8d"]

[ext_resource type="Script" path="res://Scripts/continue_menu.gd" id="1_1qp8o"]

[node name="ContinueMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.235294, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
script = ExtResource("1_1qp8o")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonContinue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonQuit")
focus_neighbor_bottom = NodePath("../ButtonStageSelect")
mouse_filter = 2
button_mask = 0
text = "Continue"

[node name="ButtonStageSelect" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonContinue")
focus_neighbor_bottom = NodePath("../ButtonQuit")
mouse_filter = 2
button_mask = 0
text = "Stage Select"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonStageSelect")
focus_neighbor_bottom = NodePath("../ButtonContinue")
mouse_filter = 2
button_mask = 0
text = "Quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContinue" to="MarginContainer" method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonStageSelect" to="MarginContainer" method="_on_button_stage_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuit" to="MarginContainer" method="_on_button_quit_pressed"]
